resolved table overflow issues

--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/TableBody.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/TableBody.module.css
@@ -4,7 +4,13 @@
   border: 2px solid var(--purple-500);
   border-top: none;
   border-radius: 0 0 20px 20px;
-  overflow: hidden;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &:webkit-scrollbar {
+    display: none;
+  }
 }
 
 .row {
