--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/pages/deviceConfigPage/DeviceConfigPage.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/pages/deviceConfigPage/DeviceConfigPage.module.css
@@ -15,9 +15,4 @@
       font-weight: 700;
     }
   }
-
-  .tableWrapper {
-    width: 100%;
-    max-width: 1200px;
-  }
 }
