--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/pages/finalPage/FinalPage.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/pages/finalPage/FinalPage.module.css
@@ -5,9 +5,4 @@
   padding: 0 35px;
   width: 100%;
   align-items: center;
-
-  .tableWrapper {
-    width: 100%;
-    max-width: 1200px;
-  }
 }
