--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/pages/tagPage/TagPage.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/pages/tagPage/TagPage.module.css
@@ -16,5 +16,7 @@
   .tableWrapper {
     width: 100%;
     max-width: 1200px;
+    overflow: hidden;
+    display: flex;
   }
 }
