--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/pages/wizardPage/WizardPage.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/pages/wizardPage/WizardPage.module.css
@@ -9,10 +9,11 @@
     flex-direction: column;
     background-color: var(--orange-500);
     align-items: center;
-    padding-top: 80px;
+    padding: 80px 0;
 
     > :first-child {
       flex: 1;
+      overflow: hidden;
     }
 
     .buttonWrapper {
